--- a/src/date-time-picker/date-time-picker.scss
+++ b/src/date-time-picker/date-time-picker.scss
@@ -1,4 +1,7 @@
 .date-time-picker {
+  table {
+    width: 100%;
+  }
   &__header {
     display: flex;
     justify-content: space-around;
@@ -9,9 +12,6 @@
   &__footer {
     display: flex;
     justify-content: space-around;
-    border-top: 1px solid #ccc;
-    margin-top: 8px;
-    padding-top: 8px;
     .form-group {
       margin-right: 0.4rem;
     }
